--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <strong><i>web-developer</i> </strong> from the city of Dhaka,
             Bangladesh. Looking forward to build innovative web applications.
           </p>
+          <button id="piazza-button">CSE391 Piazza</button>
           <div id="go-to-education" class="flex flex-col align-center">
             <span>Explore education</span>
             <a href="#education"
@@ -104,19 +105,17 @@
               <tr>
                 <td>International GCSE</td>
                 <td>2019</td>
-                <td>Willes Little Flower School & College</td>
+                <td rowspan="3">Willes Little Flower School & College</td>
                 <td>A*</td>
               </tr>
               <tr>
                 <td>International Advanced Subsidiary Level</td>
                 <td>2020</td>
-                <td>Willes Little Flower School & College</td>
                 <td>A</td>
               </tr>
               <tr>
                 <td>International Advanced Level</td>
                 <td>2022</td>
-                <td>Willes Little Flower School & College</td>
                 <td>A</td>
               </tr>
               <tr>
@@ -137,7 +136,7 @@
         <h1 class="text-white text-center mt-5 mb-5 header-text">
           Technologies I use
         </h1>
-        <ul class="flex text-white">
+        <ul class="grid text-white">
           <li>
             <a href="https://nextjs.org/">
               <img
@@ -145,8 +144,8 @@
                 src="https://www.datocms-assets.com/75941/1657707878-nextjs_logo.png"
                 alt=""
               />
-              NextJS</a
-            >
+            </a>
+            <p>NextJS</p>
           </li>
           <li>
             <a href="https://react.dev/">
@@ -154,8 +153,8 @@
                 height="80px"
                 src="https://assets.stickpng.com/images/584830f5cef1014c0b5e4aa1.png"
                 alt=""
-              />ReactJS</a
-            >
+            /></a>
+            <p>ReactJS</p>
           </li>
           <li>
             <a href="https://en.wikipedia.org/wiki/JavaScript">
@@ -163,8 +162,9 @@
                 height="80px"
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/800px-JavaScript-logo.png"
                 alt=""
-              />JavaScript
+              />
             </a>
+            <p>JavaScript</p>
           </li>
           <li>
             <a href="https://en.wikipedia.org/wiki/HTML">
@@ -172,8 +172,9 @@
                 height="80px"
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1024px-HTML5_logo_and_wordmark.svg.png"
                 alt=""
-              />HTML
+              />
             </a>
+            <p>HTML</p>
           </li>
           <li>
             <a href="https://en.wikipedia.org/wiki/CSS">
@@ -181,19 +182,18 @@
                 height="80px"
                 src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"
                 alt=""
-              />CSS
+              />
             </a>
+            <p>CSS</p>
           </li>
-        </ul>
-        <ul class="flex text-white">
           <li>
             <a href="https://tailwindcss.com/">
               <img
                 height="80px"
                 src="https://files.raycast.com/nwt9ncojkvwmjfkaada8upafvpnu"
                 alt=""
-              />Tailwind CSS</a
-            >
+            /></a>
+            <p>Tailwind</p>
           </li>
           <li>
             <a href="https://nodejs.org/en/">
@@ -201,8 +201,8 @@
                 height="80px"
                 src="https://static-00.iconduck.com/assets.00/node-js-icon-227x256-913nazt0.png"
                 alt=""
-              />NodeJS</a
-            >
+            /></a>
+            <p>NodeJS</p>
           </li>
           <li>
             <a href="https://expressjs.com/">
@@ -210,8 +210,9 @@
                 height="80px"
                 src="https://adware-technologies.s3.amazonaws.com/uploads/technology/thumbnail/20/express-js.png"
                 alt=""
-              />ExpressJS
+              />
             </a>
+            <p>ExpressJS</p>
           </li>
           <li>
             <a href="https://www.mongodb.com/">
@@ -219,8 +220,8 @@
                 height="80px"
                 src="https://seeklogo.com/images/M/mongodb-logo-D13D67C930-seeklogo.com.png"
                 alt=""
-              />MongoDB</a
-            >
+            /></a>
+            <p>MongoDB</p>
           </li>
           <li>
             <a href="https://www.mysql.com/">
@@ -228,8 +229,8 @@
                 height="80px"
                 src="https://www.freepnglogos.com/uploads/logo-mysql-png/logo-mysql-mysql-logo-png-images-are-download-crazypng-21.png"
                 alt=""
-              />MySQL</a
-            >
+            /></a>
+            <p>MySQL</p>
           </li>
         </ul>
       </section>
