--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
             <strong><i>web-developer</i> </strong> from the city of Dhaka,
             Bangladesh. Looking forward to build innovative web applications.
           </p>
-          <button id="piazza-button">CSE391 Piazza</button>
+          <a
+            target="_blank"
+            href="https://piazza.com/bracu.ac.bd/spring2023/cse391/"
+          >
+            <button id="piazza-button">CSE391 Piazza</button>
+          </a>
           <div id="go-to-education" class="flex flex-col align-center">
             <span>Explore education</span>
             <a href="#education"
@@ -79,7 +84,7 @@
           <a href="mailto:junaidahmedzama@gmail.com">
             <img
               width="40px"
-              src="https://www.freeiconspng.com/thumbs/email-icon/email-icon--clipart-best-22.png"
+              src="/images/58485698e0bb315b0f7675a8.png"
               alt=""
             />
           </a>
@@ -115,7 +120,7 @@
               </tr>
               <tr>
                 <td>International Advanced Level</td>
-                <td>2022</td>
+                <td>2021</td>
                 <td>A</td>
               </tr>
               <tr>
@@ -138,7 +143,7 @@
         </h1>
         <ul class="grid text-white">
           <li>
-            <a href="https://nextjs.org/">
+            <a href="https://nextjs.org/" target="_blank">
               <img
                 height="80px"
                 src="https://www.datocms-assets.com/75941/1657707878-nextjs_logo.png"
@@ -148,26 +153,26 @@
             <p>NextJS</p>
           </li>
           <li>
-            <a href="https://react.dev/">
+            <a href="https://react.dev/" target="_blank">
               <img
                 height="80px"
-                src="https://assets.stickpng.com/images/584830f5cef1014c0b5e4aa1.png"
+                src="https://static-00.iconduck.com/assets.00/react-icon-2048x1822-iy7h2x8y.png"
                 alt=""
             /></a>
             <p>ReactJS</p>
           </li>
           <li>
-            <a href="https://en.wikipedia.org/wiki/JavaScript">
+            <a target="_blank" href="https://en.wikipedia.org/wiki/JavaScript">
               <img
                 height="80px"
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/800px-JavaScript-logo.png"
+                src="https://i.pinimg.com/originals/13/40/7c/13407c12f50f08d328800c3caef43f61.png"
                 alt=""
               />
             </a>
             <p>JavaScript</p>
           </li>
           <li>
-            <a href="https://en.wikipedia.org/wiki/HTML">
+            <a href="https://en.wikipedia.org/wiki/HTML" target="_blank">
               <img
                 height="80px"
                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/1024px-HTML5_logo_and_wordmark.svg.png"
@@ -177,7 +182,7 @@
             <p>HTML</p>
           </li>
           <li>
-            <a href="https://en.wikipedia.org/wiki/CSS">
+            <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">
               <img
                 height="80px"
                 src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"
@@ -187,7 +192,7 @@
             <p>CSS</p>
           </li>
           <li>
-            <a href="https://tailwindcss.com/">
+            <a href="https://tailwindcss.com/" target="_blank">
               <img
                 height="80px"
                 src="https://files.raycast.com/nwt9ncojkvwmjfkaada8upafvpnu"
@@ -196,7 +201,7 @@
             <p>Tailwind</p>
           </li>
           <li>
-            <a href="https://nodejs.org/en/">
+            <a href="https://nodejs.org/en/" target="_blank">
               <img
                 height="80px"
                 src="https://static-00.iconduck.com/assets.00/node-js-icon-227x256-913nazt0.png"
@@ -205,7 +210,7 @@
             <p>NodeJS</p>
           </li>
           <li>
-            <a href="https://expressjs.com/">
+            <a href="https://expressjs.com/" target="_blank">
               <img
                 height="80px"
                 src="https://adware-technologies.s3.amazonaws.com/uploads/technology/thumbnail/20/express-js.png"
@@ -215,7 +220,7 @@
             <p>ExpressJS</p>
           </li>
           <li>
-            <a href="https://www.mongodb.com/">
+            <a href="https://www.mongodb.com/" target="_blank">
               <img
                 height="80px"
                 src="https://seeklogo.com/images/M/mongodb-logo-D13D67C930-seeklogo.com.png"
@@ -224,7 +229,7 @@
             <p>MongoDB</p>
           </li>
           <li>
-            <a href="https://www.mysql.com/">
+            <a href="https://www.mysql.com/" target="_blank">
               <img
                 height="80px"
                 src="https://www.freepnglogos.com/uploads/logo-mysql-png/logo-mysql-mysql-logo-png-images-are-download-crazypng-21.png"
@@ -256,23 +261,80 @@
           of craftsmanship and ingenuity.
         </p>
         <p><i>"Dreams don't work unless you do."</i> - John C. Maxwell</p>
-        <p>
-          <a
-            target="_blank"
-            class="text-primary"
-            href="https://piazza.com/bracu.ac.bd/spring2023/cse391/"
-            >Click here</a
-          >
-          to go to the CSE391 piazza page.
-        </p>
       </section>
     </main>
-    <footer id="footer" class="bg-primary p-3 text-center text-white">
-      <span>&copy; Junaid Ahmed Zama, 2024. All rights reserved.</span>
+    <footer id="footer" class="bg-primary p-3 text-white">
+      <div class="flex justify-between">
+        <div>
+          <p style="font-size: x-large; font-weight: bold">Junaid Ahmed Zama</p>
+          <span style="font-size: 14px"
+            ><i>- A professional web developer</i></span
+          >
+        </div>
+        <div>
+          <h4 style="margin-bottom: 5px">Social Media</h4>
+          <ul style="list-style: none; text-align: left !important">
+            <li>
+              <a
+                style="align-items: start"
+                href="https://www.facebook.com/junaidahmedzamaa/"
+                target="_blank"
+                >Facebook</a
+              >
+            </li>
+            <li>
+              <a
+                style="align-items: start"
+                href="https://www.linkedin.com/in/junaidahmedzama/"
+                target="_blank"
+                >LinkedIn</a
+              >
+            </li>
+            <li>
+              <a
+                style="align-items: start"
+                target="_blank"
+                href="https://github.com/junaidzamaahmed"
+                >GitHub</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h4 style="margin-bottom: 5px">Links</h4>
+          <ul style="list-style: none; text-align: left !important">
+            <li>
+              <a style="align-items: start" href="#education">Education</a>
+            </li>
+            <li>
+              <a style="align-items: start" href="#technologies"
+                >Technologies</a
+              >
+            </li>
+            <li><a style="align-items: start" href="#about">About</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 style="margin-bottom: 5px">Contact</h4>
+          <ul style="list-style: none; text-align: left !important">
+            <li>
+              <a href="mailto:junaidahmedzama@gmail.com"
+                >Email: junaidahmedzama@gmail.com</a
+              >
+            </li>
+            <li>Phone: +880 1234567890</li>
+            <li>Address: Dhaka, Bangladesh</li>
+          </ul>
+        </div>
+      </div>
+      <hr style="opacity: 0.3; margin-bottom: 10px; margin-top: 10px" />
+      <div class="text-center" id="footer-text">
+        <span>&copy; Junaid Ahmed Zama, 2024. All rights reserved.</span>
+      </div>
     </footer>
     <script>
       document.getElementById(
-        "footer"
+        "footer-text"
       ).innerHTML += ` Last modified: ${document.lastModified}</br>Location: ${document.location.href}`;
     </script>
   </body>
