--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <a href="mailto:junaidahmedzama@gmail.com">
             <img
               width="40px"
-              src="/images/58485698e0bb315b0f7675a8.png"
+              src="./images/58485698e0bb315b0f7675a8.png"
               alt=""
             />
           </a>
